--- a/stale.yml
+++ b/stale.yml
@@ -7,6 +7,8 @@ exemptLabels:
   - pinned
   - security
   - bug
+  - 3.0
+  - next-major
 # Label to use when marking an issue as stale
 staleLabel: wontfix
 # Comment to post when marking an issue as stale. Set to `false` to disable
